# image-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bash_scripts.sh  build_conda-cuda-10_2.sh  build_conda.sh  environment-dev.yml  environment.yml  index.md  mkdocs.yml  pipreqs_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: autoblack_push.yaml  python-isort.yaml  python-package.yaml  test_on_push.yaml
docs/: conf.py  index.rst
docs/api/: imutils.rst  modules.rst
docs/imutils/: catalog_registry.html  generate_multires_images.html  generate_multithresh_symlink_trees.html  index.html  make_catalogs.html  robust_image_duplicator.html
docs/imutils/big/: common_catalog_utils.html  index.html  make_LeavesDb_2022_catalog_df.html  make_herbarium_2022_catalog_df.html  make_shards.html  make_train_val_splits.html  make_train_val_test_splits.html
docs/imutils/ml/: index.html  losses.html  main_ce.html  main_linear.html  main_supcon.html  run_main.html
docs/imutils/ml/aug/: index.html  loss.html
docs/imutils/utils/: SmartCrop.html  dataset_management_utils.html  etl_utils.html  file_utils.html  index.html  third_party.html
image_catalog/: __init__.py  catalog_file_tree-multicolor.txt  catalog_file_tree-schema.md  catalog_file_tree.txt  catalog_registry.py  image_datasets.py  make_catalogs.py  make_train_val_test_splits.py  splits_registry.py
image_catalog/utils/: __init__.py  common_catalog_utils.py  etl_utils.py  label_utils.py  split_catalog_utils.py  template_utils.py
imutils/: SmartCrop-refactor.py  __init__.py  __make_catalogs.ignore  _imutils.py  _pyboilerplate.py  catalog_registry.py  generate_all_data_multi-res-thresh.sh  generate_multires_images.py  generate_multithresh_symlink_trees.py  make_catalogs.py  robust_image_duplicator.py
imutils/big/: Makefile  __init__.py  common_catalog_utils.py  datamodule.py  default.env  make_LeavesDb_2022_catalog_df.py  make_herbarium_2022_catalog_df.py  make_shards.py  make_train_val_splits.py  make_train_val_test_splits.py  split_catalog_utils.py
imutils/ml/: README.md  __init__.py  losses.py  main_ce.py  main_linear.py  main_supcon.py  run_main.py
imutils/ml/aug/: __init__.py  loss.py
imutils/ml/callbacks/: class_label_stats_callbacks.py  image_stats_callbacks.py  wandb_callbacks.py
imutils/ml/conf/: base_conf.yaml  dev2_conf.yaml  dev_conf.yaml
imutils/ml/data/: __init__.py  datamodule-backup.py  datamodule.py  dataset.py
imutils/ml/models/: __init__.py  base.py  lightning.py
imutils/ml/optimizer/: __init__.py  ranger.py
imutils/ml/pretrain/: __init__.py  lr_tuner.py
imutils/ml/utils/: __init__.py  common.py  etl_utils.py  experiment_utils.py  label_utils.py  metric_utils.py  model_utils.py  plot_utils.py  run_utils.py  taxonomy_utils.py  template_utils.py
imutils/utils/: SmartCrop.py  __init__.py  dataset_management_utils.py  etl_utils.py  file_utils.py  third_party.py
imutils/utils/ResizeRight/: README.md  __init__.py  setup.py
notebooks/: 2022-04-04_JRose-Exp#19_baseline_herbarium2022_test_predictions_submission--fixed-labels.csv  2022-04-04_JRose-Exp#19_baseline_herbarium2022_test_predictions_submission.csv  Basic experiment tools dev.ipynb  EDA_calc_image_stats.ipynb  Exp#19_baseline_herbarium2022_test_predictions_submission.csv  FFCV_dataset_cache_playground.ipynb  LMDB Datasets Dev notebook.ipynb  Matplotlib Legend placement playground.ipynb  baseline_lightning_trainer-2.ipynb  baseline_lightning_trainer.ipynb  find_data_splits_dir_dev.ipynb  find_data_splits_dir_unit_test_dev.ipynb  plot_class_taxonomy_counts.ipynb  test.json
notebooks/experimental/: refactoring Leaves + herbarium datasets.ipynb  refactoring_datasets_datamodules_22-05-18.ipynb
notebooks/fossil dataset preprocessing/: 2022-06-12-supervenn playground notebook .ipynb  2022-07-16-unlabeled yale fossils dataset - playground notebook.ipynb  2022-08-03-napari & fiftyone-sandbox.ipynb  2022-08-04-meerkat yale Fossils sorting sandbox.ipynb  2022-08-07-unlabeled yale fossils dataset - meerkat attempt #2.ipynb  fiftyone-demo-cifar100-similarity_app.py  load_leavesdb.py  plot_image_property_outliers.ipynb
notebooks/fossil dataset preprocessing/2022-yale_fossil/: 01_joblib_parallel_image_stats -- 2022-08-08-unlabeled yale fossils dataset.ipynb  02a+b_imagestats_EDA_plots -- 2022-08-08-unlabeled yale fossils dataset.ipynb  04_image deduplication through clustering -- 2022-09-21-unlabeled yale fossils dataset.ipynb  05_image embeddings focus -- 2022-09-26-unlabeled yale fossils dataset.ipynb  app.py
notebooks/herbarium_2022/: Cache_Herbarium_2022-dataset-w-FFCV.ipynb  make_splits_and_save_preprocessed_catalogs.ipynb
notebooks/plots/: Extant Leaves-Genus_Counts-x-CumSum_table.csv  Extant Leaves-Species_Counts-x-CumSum_table.csv  Florissant Fossils-Genus_Counts-x-CumSum_table.csv  Florissant Fossils-Species_Counts-x-CumSum_table.csv  General Fossils-Genus_Counts-x-CumSum_table.csv  General Fossils-Species_Counts-x-CumSum_table.csv
notebooks/preprocessing_notebooks/: 22-10-15--fastai_imports_audit_notebook_and_notes.ipynb  dask_image_resize_parallelization.ipynb
pyboilerplate/: __init__.py
requirements/: .yml  build_conda.sh  environment-dev.yml  environment.yml  postBuild  requirements-dev.txt  requirements.txt
site/: 404.html  index.html  sitemap.xml
tests/: test_imutils.py  test_pyboilerplate.py
tests/unit/: test_cuda.py  test_datamodule.py  test_robust_image_duplicator.py
(+133 files in other folders)
