; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = pyboilerplate
version = attr: pyboilerplate.__init__.__version__
author = ctgk
author_email = r1135nj54w@gmail.com
description = Boilerplate for Python project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = posix
url = https://github.com/ctgk/python-boilerplate

[options]
python_requires = >=3.6
install_requires =
packages = find:
zip_safe = False

[options.packages.find]
include =
    pyboilerplate
    pyboilerplate.*
exclude =
    docs
    tests

[options.extras_require]
develop =
    pre-commit
    pytest

    # format
    autopep8
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

    # documentation
    sphinx
    sphinx_rtd_theme
    livereload


[flake8]
per-file-ignores =
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package
    tests/*.py:D100,D101,D102,D103,D104

application-import-names = pyboilerplate

; https://github.com/PyCQA/flake8-import-order/blob/master/tests/test_cases/complete_google.py
import-order-style = google
