; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = imutils
version = attr: imutils.__init__.__version__
author = JacobARose
author_email = jacobrose@brown.edu
description = "Refined collection of various image file utilities I've written and re-written at various points during my graduate studies performing research in computer vision."
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = posix
url = https://github.com/JacobARose/image-utils


[options]
python_requires = >=3.7
setup_requires =
    numpy
    pandas
    Pillow
    tqdm
install_requires =
    numpy>=1.19
    pandas>=1.3.0
    Pillow
    tqdm
packages = find:
zip_safe = False

[options.packages.find]
include =
    imutils
    imutils.*
exclude =
    docs
    tests

[options.extras_require]
develop =
    # 'file:requirements-dev.txt'
    pre-commit
    pytest

    # format
    autopep8
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

    # documentation
    sphinx
    sphinx_rtd_theme
    livereload


[aliases]
test=pytest


[flake8]
count = True
show-source = True
statistics = True
#  F401: imported but unused
ignore = E203, E266, E501, W503, E231, F541, F401
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9

per-file-ignores =
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package
    tests/*.py:D100,D101,D102,D103,D104

application-import-names = imutils

; https://github.com/PyCQA/flake8-import-order/blob/master/tests/test_cases/complete_google.py
import-order-style = google
